<resources>
    <string name="app_name">IntelliFacts</string>
    <string name="textview">TextView</string>
    <string name="you">You</string>
    <string name="did">Did</string>
    <string name="know">Know ?</string>
    <string name="discover">Discover!</string>
    <string name="about_mauritius">About Mauritius</string>
    <string name="local_art">Local art</string>
    <string name="Local_art">Local Art</string>
    <string name="About_Mauritius">About Mauritius</string>
    <string name="cuisine">Cuisine</string>
    <string name="topic_3">Topic 3</string>
    <string name="quiz_time">Quiz Time!</string>
    <string name="topic4">topic4</string>
    <string name="intellifacts_by_moksesh_and_tridev">©INTELLIFACTS - BY MOKSESH AND TRIDEV</string>
    <string name="sega">SEGA</string>
    <string name="handcraft">HANDCRAFT</string>
    <string name="gato_pima">GATO PIMA</string>
    <string name="dhol_puri">DHOL PURI</string>
    <string name="figure_gato_pima">figure: gato pima</string>
    <string name="did_n_you_n_know_n">Did  \n You \n Know  \n ?</string>
    <string name="mauritian_history">Mauritius History</string>
    <string name="figure1">figure1</string>
    <string name="introhistory">In the Indian Ocean over a thousand miles from the southeastern coast of Africa
        is the gorgeous island of Mauritius. Mauritius is a single ‘volcanic’ island where there are wonderful sandy beaches,
        coral reefs, forested mountains and beautiful national parks and gardens.
        This small developing country has a history which many people may not know about.</string>
    <string name="invite">Here are some facts about Mauritius you may have not heard of. </string>
    <string name="fact_1"># Fact 1: </string>
    <string name="fact1detail">Mauritius was uninhabited by humans until the Arabs landed there in the Middle Ages.
        They called the island Dine Arobi. The Portuguese came next, a seaman named Domingo Fernandez Pereira
        sighted Mauritius and named it Ilha do Cerne(Island of the Swan) but neither stayed.</string>
    <string name="portugeuse_ship">Portugeuse ship</string>
    <string name="poshipn">Portuguese explorer Vasco da Gama\'s Ship (Year 1507)</string>
    <string name="fact_2"># Fact 2:</string>
    <string name="van_nassau">Van nassau</string>
    <string name="prince_maurice_van_nassau">Prince Maurice van Nassau</string>
    <string name="fact2detail">The Dutch Republic established a colony in 1638, naming it after Prince Maurice van Nassau.
        Other governors:
        \n
        1. Cornelis Gooyer 	(1638-1639)
\n 2. Adriaen van der Stel (1639-1645)
\n 3. Jacob van der Meersch 	(1645-1648)
\n 4. Reiner Por 	(1648-1653)
\n 5. Maximiliaan de Jongh 	(1653-1656)
\n 6. Abraham Evertsz 	(1656-1658)
\n 7. Jacobus van Nieuwlant 	(1664-1665)
\n 8. George Wreede 	(1665-1673)
\n 9. Hubert Hugo 	(1673-1677)
    </string>
    <string name="fact_3"># Fact 3:</string>
    <string name="flag">flag</string>
    <string name="fact3detail">In September 1715, Guillaume Dufresne d\'Arsel took possession of Mauritius in the name of King Louis XV of France.
        He named it the Isle de France, placed the French flag near what is now Port Louis,
        drew a document witnessed by his officers declaring the island French and sailed away after three days.
    Due to its strategic position the island was known as the “star and key” of the Indian Ocean.</string>
    <string name="stateflag">State flag raised in the presence of the king of France in Isle de France</string>
    <string name="fact_4"># Fact 4:</string>
    <string name="fact4detail">Isle de France( Mauritius) was fought over by the French and British during the Napoleonic years. With England and France at war, Labourdonnais led an expedition of nine ships from the Ile de France to India.
        \n\n He was accused of accepting a bribe to preserve Madras and was replaced as Governor of Ile de France. He was
    jailed to the bastille in 1748-1751. </string>
    <string name="mahe_de_labourdonnais">mahe de labourdonnais</string>
    <string name="mahe_de_labourdonnais_governor_of_mauritius_1734_1746">Mahe de labourdonnais(Governor of Isle de France 1734-1746)</string>
    <string name="war">war</string>
    <string name="warinfo">Battle of Grand-Port (1810)</string>
    <string name="fact5detail">During the Napoleonic Wars, the British invaded Mauritius in 1810. Under British rule Mauritius became the Empire’s main sugar-producing colony. When slavery was abolished by Parliament in 1835, the planters received compensation for their African slaves. The British Occupation of the island lasted till 1968 when they granted the country independence.</string>
    <string name="fact_5"># Fact 5:</string>
    <string name="fact_6"># Fact 6:</string>
    <string name="labour">labour</string>
    <string name="fact6i">Indentured laborers from India to work the sugar cane fields.</string>
    <string name="fact6detail">In 1872 two lawyers were sent from England to form a Royal Commission.
        They recommended measures that positively affected the lives of those Indo-Mauritian laborers over the next 50 years.</string>
    <string name="fact_7"># Fact 7:</string>
    <string name="father_of_the_nation_sir_seewoosagur_ramgoolam">Father of the nation Sir Seewoosagur Ramgoolam</string>
    <string name="fact7detail">Universal adult suffrage was instituted in March 1959. The country became an independent state in March 1968 and a member of the Commonwealth of Nations in 1992.</string>
    <string name="fact_8"># Fact 8:</string>
    <string name="mauritian_flag">Mauritian flag</string>
    <string name="mauritian_flag1">Mauritian Flag</string>
    <string name="fact8detail">The flag was designed by Gurudutt Moher who was a primary school teacher at that time.
        He died of a heart attack on October, 7, 2017 at the age of 93.</string>
    <string name="fact_9"># Fact 9:</string>
    <string name="fact9intro">The 4 colors of the Mauritian flag</string>
    <string name="fact9detail">red - represents self-determination and independence,\n
        \nblue - the Indian Ocean surrounding the island,\n
        \nyellow - has been interpreted as the new light of independence, golden sunshine, or the bright future,\n
        \n green - can symbolize either agriculture or the lush vegetation of the island</string>
    <string name="mauritius_history">Mauritius History</string>
    <string name="history2">Street food is fantastic in Mauritius.You can get everything from fresh coconut water,
        chopped fruit covered in chilli and sugar, hot curries topped with chilli and pickles wrapped in buttery breads,
        and Chinese fried noodles. Mauritius also has fabulous restaurants from local eateries with
        authentic food to gourmet places that serve Mauritian fusion food.</string>
    <string name="invitecuisine">Here are some typical Mauritian foods you must try if you are in Mauritius</string>
    <string name="mauritian_cuisines">Mauritian Cuisines</string>
    <string name="figure2">figure2</string>
    <string name="dholl_pori">Dholl pori</string>
    <string name="dhall_puri">Dhall puri</string>
    <string name="fact1detailt2">If Mauritius had a national dish, this would probably be it. Dholl puris are thought to be derived from Indian flatbread, paratha. Indian immigrants to Mauritius couldn’t get the ingredients to make the bread on the island, and their substitute, a fried thin bread stuffed with ground yellow split peas, and served in a pair with bean curry, atchar and chutney.</string>
    <string name="seafood">seafood</string>
    <string name="lobster_gram_seafood_baked">Lobster Gram seafood baked</string>
    <string name="fact2detailt2">However you want it: baked, grilled, fried, sauteed.
        Mauritius has incredible seafood culture from local fish capitaine to calamari and lobsters.
        Mauritian cuisine pretty much revolves around seafood whether it’s curries, stews, Chinese dishes or Indian,
        it’s seafood-heavy. Mauritius is like a pescatarian heaven.</string>
    <string name="alouda1">Alouda</string>
    <string name="alouda">Alouda</string>
    <string name="fact3detailt2">Similar to the Cape Malay drink falooda,
        which you find in Cape Town’s Bo-Kaap, alouda is a pink sweet milky beverage with tapioca balls,
        flavoured with a syrup. According to locals, the best place to find alouda is in the Port Louis food market,
        where many people often have it as a refreshing drink.</string>
    <string name="minefrite">minefrite</string>
    <string name="mine_frite">Mine Frite</string>
    <string name="fact4detailt2">Another popular street food dish is mine frites (fried noodles). This is a simple, yet tasty, dish of soy-sauce-fried noodles topped with spring onions and chilli.
        As it’s a Chinese-influenced dish, the best place to eat mine frites is, unsurprisingly in Chinatown, at a street stall.
        It sounds weird, it looks weird, but it tastes good.
        </string>
    <string name="phoenix">phoenix</string>
    <string name="pheonix_beer">Pheonix Beer</string>
    <string name="fact5detailt2">Mauritius’ local beer, Phoenix, is an award-winning, crisp, refreshing lager that goes well with pretty much anything you’ll eat on the island, and is great by itself, drunk at sunset on the beach.</string>
    <string name="green_creamy_coconuts">Green Creamy Coconuts</string>
    <string name="fact6detailt2">Don’t leave Mauritius without drinking from a coconut.
        It may sound tropical-island-cheesy but it’s so tasty and it is not something you find at home much.
        Coconut water is deliciously refreshing. Like the pineapples, the best place to find coconuts is on the beach.</string>
    <string name="vindaye_poisson">Vindaye Poisson</string>
    <string name="fact7detailt2">This Mauritian dish is supposedly adapted from the Indian vindaloo, although there’s debate
        about this. It’s cooked with mustard, garlic, ginger, turmeric, onion and usually fish,
        although it can be made with vegetables instead. It’s served with rice, lentils, pickles and chutneys.</string>
    <string name="boischeri">boischeri</string>
    <string name="bois_cheri_tea_plantations">Bois cheri Tea plantations</string>
    <string name="fact8detailt2">Bois Cheri tea estate, in the south of the island, grows black tea,
        which they then mix with Ceylon tea imported from Sri Lanka, and vanilla flavouring imported
        from South Africa to produce a delicious black vanilla tea. You’ll find it all over the island but
        the best place to drink it is at the Bois Cheri cafe after a tour of the tea factory and a tea tasting.</string>
    <string name="patate_douce">Patate douce</string>
    <string name="gateau_de_patate_douce_sweet_potato_cakes">Gateau de Patate Douce</string>
    <string name="fact9detailt2">These sweet potato cakes are a tasty Mauritian teatime treat.
        Sweet potato dough encases a filling of coconut, cardamom and sugar which is then deep fried.</string>
    <string name="fact_10"># Fact 10:</string>
    <string name="palmheart_pic">Palmheart pic</string>
    <string name="palm_heart_salad">Palm heart salad</string>
    <string name="todo">TODO</string>
    <string name="ans1">ans1</string>
    <string name="ans2">ans2</string>
    <string name="ans3">ans3</string>
    <string name="questionfield">questionField</string>
    <string name="todo2">todo2</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="score_0">Score: 0</string>
    <string name="topics">Topics</string>
    <string name="home">Home</string>
</resources>